added service areas

--- a/index.html
+++ b/index.html
@@ -225,6 +225,15 @@
 <li><a href="areas.html?areaName=Stafford+VA">Stafford VA</a></li>
 <li><a href="areas.html?areaName=Vienna+VA">Vienna VA</a></li>
 <li><a href="areas.html?areaName=Woodbridge+VA">Woodbridge VA</a></li>
+<li><a href="areas.html?areaName=Roanoke+Region">Roanoke Region</a></li>
+<li><a href="areas.html?areaName=Christiansburg">Christiansburg</a></li>
+<li><a href="areas.html?areaName=Lynchburg">Lynchburg</a></li>
+<li><a href="areas.html?areaName=Blacksburg">Blacksburg</a></li>
+<li><a href="areas.html?areaName=Wise+County">Wise County</a></li>
+<li><a href="areas.html?areaName=Lee+County">Lee County</a></li>
+<li><a href="areas.html?areaName=Gate+City">Gate City</a></li>
+<li><a href="areas.html?areaName=Smith+County">Smith County</a></li>
+<li><a href="areas.html?areaName=NOVA">NOVA</a></li>
 </ul>
 </li>
 <li><a href="./fleet.html">Our Fleet</a></li>
