Company name change

--- a/career.html
+++ b/career.html
@@ -250,8 +250,8 @@
         <div class="container">
             <div class="row">
           <div class="col-lg-6">
-              <h2>ARE YOU EXPERIENCED IN DRIVING, CUSTOMER SERVICE OR PATIENT CARE? JOIN THE SUCCESS TEAM AT VA TRANSPORTATION HEALTHCARE LLC</h2>
-              <p>This role centers around non-emergency medical transportation, and we encourage applicants with backgrounds in customer service, home health-care, and delivering exceptional patient or similar care. VA Transportation Healthcare is dedicated to serving our communities through ADA (Americans with Disabilities Act) transportation. Join our team, the leading private-sector provider of public transportation in North America, demonstrating genuine concern for our employees, passengers, and the communities we serve.</p>
+              <h2>ARE YOU EXPERIENCED IN DRIVING, CUSTOMER SERVICE OR PATIENT CARE? JOIN THE SUCCESS TEAM AT BRIGHTSTAR NON-MEDICAL TRANSPORTATION HEALTHCARE LLC</h2>
+              <p>This role centers around non-emergency medical transportation, and we encourage applicants with backgrounds in customer service, home health-care, and delivering exceptional patient or similar care. BrightStar Non-Medical Transportation Healthcare is dedicated to serving our communities through ADA (Americans with Disabilities Act) transportation. Join our team, the leading private-sector provider of public transportation in North America, demonstrating genuine concern for our employees, passengers, and the communities we serve.</p>
               <h4>WHY DRIVE WITH US?</h4>
               <ul>
                 <li>Top paid</li>
