--- a/about.html
+++ b/about.html
@@ -293,9 +293,9 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <div class="about__company__title">
 <p>Our team is committed to delivering top-notch NEMT transportation services to our customers and partners, prioritizing dependability, convenience, safety, and value, while embodying servant leadership principles.
 
-VA Transportation Healthcare LLC was established with the aim of providing trustworthy and quality NEMT transportation services to individuals in need of assisted transportation. Our dedication lies in bridging the gap between personal and public transportation options.
+BrightStar Non-Medical Transportation LLC was established with the aim of providing trustworthy and quality NEMT transportation services to individuals in need of assisted transportation. Our dedication lies in bridging the gap between personal and public transportation options.
 
-VA Transportation Healthcare LLC is dedicated to offering the most reliable and highest quality wheelchair transportation, with a direct focus on addressing our clients' needs promptly, sensitively, and with unwavering integrity. We at VA Transportation Healthcare LLC aim to surpass your expectations.
+BrightStar Non-Medical Transportation LLC is dedicated to offering the most reliable and highest quality wheelchair transportation, with a direct focus on addressing our clients' needs promptly, sensitively, and with unwavering integrity. We at BrightStar Non-Medical Transportation LLC aim to surpass your expectations.
 
 Our entire staff, identified by photo ID badges and dressed in company uniforms, adheres to strict screening and certification protocols. Your comfort and safety are our foremost priorities.</p>
 </div>
