--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Bright Star</title>
+<title>Bright Star Non-Medical Transportation</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
@@ -134,9 +134,6 @@
 <li><span class="icon_phone"></span> +1 540-380-0024</li>
 <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
 </ul>
-<div class="offcanvas__auth">
-<a href="#"><span class="icon_profile"></span> Register or Sign in</a>
-</div>
 <div class="offcanvas__social">
 <a href="#"><span class="social_facebook"></span></a>
 <a href="#"><span class="social_twitter"></span></a>
@@ -238,7 +235,7 @@
 </li>
 <li><a href="./fleet.html">Our Fleet</a></li>
 <li><a href="./career.html">Career</a></li>
-<li><a href="./contact.html">Reserve</a></li>
+<li><a href="./contact.html">Reservation</a></li>
 <!--<li><a href="#">Brochure</a></li>-->
 </ul>
 </nav>
@@ -271,12 +268,12 @@
 <div class="col-lg-5 p-0">
 <div class="section-title">
 <span>What We do?</span>
-<h2>Welcome to the Bright Star Transportation, we are the best.</h2>
+<h2>Welcome to the Bright Star Non-Medical Transportation, we are the best.</h2>
 </div>
 </div>
 <div class="col-lg-5 offset-lg-2 p-0">
 <div class="services__top__text">
-<p>For more than four decades, Bright Star' world-class Transportation services
+<p>For more than five years, BrightStar Non-Medical Transportation services
 have improved bottom lines across virtually every industry.</p>
 </div>
 </div>
@@ -304,7 +301,7 @@ have improved bottom lines across virtually every industry.</p>
 <img src="img/services/si-2.png" alt="">
 </div>
 <h5>Strecher Transport</h5>
-<p>With over a decade of expertise, VA Transportation Healthcare specializes in non-emergency medical stretcher transportation services.</p>
+<p>With over 5 years of expertise, BrightStar Non-Medical Transportation Healthcare specializes in non-emergency medical stretcher transportation services.</p>
 <a href="#">Read More</a>
 </div>
 </div>
