--- a/services.html
+++ b/services.html
@@ -305,7 +305,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
     <h4>WHLEECHAIR TRANSPORTATION SERVICES VA</h4>
 <p>Providing Non-Emergency</p>
 <p>Medical Transport (NEMT) in the whole Virginia</p><br>
-<p>If you are looking for assisted transportation services like wheelchair transport in any Virginia city, VA Transportation Healthcare LLC is the right answer. We have services hundreds of patients especially elderly ones who need special care.</p><br>
+<p>If you are looking for assisted transportation services like wheelchair transport in any Virginia city, BrightStar Non-Medical Transportation LLC is the right answer. We have services hundreds of patients especially elderly ones who need special care.</p><br>
 <p>We offer quality & professional, highly personalized door-to-door non-emergency medical transportation service. Our trained staff will pick you up from inside your house or office and transport with complete safety and securely all the way to your final destination. We strive hard to meet highest standards of dedication, reliability, and attention to detail when you travel in our especially designed vehicles.</p><br>
 <p>Who Needs Our Services:</p><br>
 <p><ul><li>Elderly who need assisted rides</li>
@@ -320,7 +320,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
   <p>Best Assisted Rides in VA</p>
 <h2>ASSISTED TRANSPORTATION WITH WHEELCHAIR FACILITY</h2>
 <div class="about__company__title">
-<p>Our highly trained staff members are dedicated to respond with promptness, sensitivity and integrity. We only hire professionally trained drivers who are thoughtful and compassionate and truly empathize and understand the difficulties that arise for persons with limited mobility. Each driver goes through back ground check and has completed extensive training in the handling of patients with special needs to insure safe and proper transfer. Our staff also understands the necessity of maintaining patient confidentiality. VA Transportation Healthcare LLC is the leading wheelchair transport in Washington DC, Virginia & Maryland, call us for more details or to schedule an appointment.</p></div>
+<p>Our highly trained staff members are dedicated to respond with promptness, sensitivity and integrity. We only hire professionally trained drivers who are thoughtful and compassionate and truly empathize and understand the difficulties that arise for persons with limited mobility. Each driver goes through back ground check and has completed extensive training in the handling of patients with special needs to insure safe and proper transfer. Our staff also understands the necessity of maintaining patient confidentiality. BrightStar Non-Medical Transportation LLC is the leading wheelchair transport in Washington DC, Virginia & Maryland, call us for more details or to schedule an appointment.</p></div>
 </div>
 </div>
 <div class="col-lg-6">
