--- a/fleet.html
+++ b/fleet.html
@@ -284,7 +284,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <div class="col-lg-5">
 <div class="section-title">
   <p>Why?</p>
-<h2>Bright Star Non Medical Transportation</h2>
+<h2>Bright Star Non-Medical Transportation</h2>
 <div class="about__company__title">
 <p>Our team endeavors to provide the very best nemt transportation service for all of our customer/ partners, including dependability, convenience, safety and value, while exhibiting servant leadership to all.
 
