--- a/career.html
+++ b/career.html
@@ -226,7 +226,7 @@
 </li>
 <li><a href="./fleet.html">Our Fleet</a></li>
 <li class="active"><a href="./career.html">Career</a></li>
-<li><a href="./contact.html">Reserve Ride</a></li>
+<li><a href="./contact.html">Reservation</a></li>
 <!--<li><a href="#">Brochure</a></li>-->
 </ul>
 </nav>
@@ -241,8 +241,8 @@
         <div class="container">
             <div class="row">
           <div class="col-lg-6">
-              <h2>ARE YOU EXPERIENCED IN DRIVING, CUSTOMER SERVICE OR PATIENT CARE? JOIN THE SUCCESS TEAM AT VA TRANSPORTATION HEALTHCARE LLC</h2>
-              <p>This position focuses on non-emergency medical transportation, but we welcome candidates with experience in customer service, home health-care, and providing high-quality patient or other care. VA Transportation Healthcare proudly serves our communities with ADA (Americans with Disabilities Act) transportation. Come join the largest private sector operator of public transportation in North America – one that cares about its employees, passengers and their communities.</p>
+              <h2>ARE YOU EXPERIENCED IN DRIVING, CUSTOMER SERVICE OR PATIENT CARE? JOIN THE SUCCESS TEAM AT BrightStar Non-Medical Transportationation LLC</h2>
+              <p>This position focuses on non-emergency medical transportation, but we welcome candidates with experience in customer service, home health-care, and providing high-quality patient or other care. BrightStar Non-Medical Transportationation proudly serves our communities with ADA (Americans with Disabilities Act) transportation. Come join the largest private sector operator of public transportation in North America – one that cares about its employees, passengers and their communities.</p>
               <h4>WHY DRIVE WITH US?</h4>
               <ul>
                 <li>Top paid</li>
