--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Bright Star</title>
+<title>Bright Star Non-Medical Transportation</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
@@ -134,9 +134,6 @@
 <li><span class="icon_phone"></span> +1 540-380-0024</li>
 <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
 </ul>
-<div class="offcanvas__auth">
-<a href="#"><span class="icon_profile"></span> Register or Sign in</a>
-</div>
 <div class="offcanvas__social">
 <a href="#"><span class="social_facebook"></span></a>
 <a href="#"><span class="social_twitter"></span></a>
@@ -229,7 +226,7 @@
 </li>
 <li><a href="./fleet.html">Our Fleet</a></li>
 <li><a href="./career.html">Career</a></li>
-<li><a href="./contact.html">Reserve</a></li>
+<li><a href="./contact.html">Reservation</a></li>
 <!--<li><a href="#">Brochure</a></li>-->
 </ul>
 </nav>
@@ -262,12 +259,12 @@
 <div class="col-lg-5 p-0">
 <div class="section-title">
 <span>What We do?</span>
-<h2>Welcome to the Bright Star Transportation, we are the best.</h2>
+<h2>Welcome to the Bright Star Non-Medical Transportation, We are the best.</h2>
 </div>
 </div>
 <div class="col-lg-5 offset-lg-2 p-0">
 <div class="services__top__text">
-<p>For more than four decades, Bright Star' world-class Transportation services
+<p>For more than Five Years, Bright Star Non-Medical Transportation services
 have improved bottom lines across virtually every industry.</p>
 </div>
 </div>
@@ -295,7 +292,7 @@ have improved bottom lines across virtually every industry.</p>
 <img src="img/services/si-2.png" alt="">
 </div>
 <h5>Strecher Transport</h5>
-<p>With over a decade of expertise, VA Transportation Healthcare specializes in non-emergency medical stretcher transportation services.</p>
+<p>With over five years of expertise, BrightStar Non-Medical Transportation specializes in non-emergency medical stretcher transportation services.</p>
 <a href="#">Read More</a>
 </div>
 </div>
@@ -358,7 +355,7 @@ ut labore et dolore magna aliqua.</p>-->
 <div class="counter__item">
 <img src="img/about/ci-2.png" alt="">
 <div class="counter__item__num">
-<h2 class="c_num">2023</h2>
+<h2 class="c_num">2018</h2>
 </div>
 <h5>Working Since</h5>
 <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
@@ -379,7 +376,7 @@ ut labore et dolore magna aliqua.</p>-->
 </div>
 </div>
 </center>
-<h5 style="text-align: center;color: orangered;">BRIGHT STAR TRANSPORTATION HEALTHCARE PROVIDE MEDICAL TRANSPORT TO MANY HEALTHCARE PROVIDERS!</h5><br>
+<h5 style="text-align: center;color: orangered;">BRIGHT STAR TRANSPORTATION HEALTHCARE PROVIDE NON-MEDICAL TRANSPORT TO VARIOUS HEALTHCARE FACILITIES AND INDIVIDUALS</h5><br>
 <div class="partner__logo">
 <div class="row">
 <div class="col-lg-12">
@@ -422,8 +419,8 @@ ut labore et dolore magna aliqua.</p>-->
 <div class="col-lg-6">
 <div class="chooseus__text">
 <div class="section-title">
-<span>Serving Northern VA, Maryland and DC</span>
-<h2>WHY TO USE OUR NON-EMERGENCY MEDICAL TRANSPORT SERVICE?</h2>
+<span>Serving South, South-West Virginia and Beyond</span>
+<h2>WHY USE OUR NON-EMERGENCY MEDICAL TRANSPORT SERVICE?</h2>
 </div>
 <div class="row">
 <p style="color: #fff;">We offer professional door-to-door non-emergency transportation services, including wheelchair and stretcher options, catering to patients, seniors, and individuals in need of assisted transport across the tri-state region. Our specialized medical transport covers various cases such as seniors, wheelchair users, and families with special needs, ensuring safe and punctual travel, including hospital-to-home transfers. Our team provides accessible vehicles, serving private individuals, medical institutions, insurance entities, nursing homes, and assisted living facilities. With a comprehensive understanding of client requirements, especially in geriatric wheelchair transport, we provide a complete range of transportation solutions for the elderly, disabled individuals, and those facing medical obstacles.</p>
