--- a/areas.html
+++ b/areas.html
@@ -137,14 +137,10 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <li><span class="icon_phone"></span> +1 540-380-0024</li>
 <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
 </ul>
-<div class="offcanvas__auth">
-<a href="#"><span class="icon_profile"></span> Register or Sign in</a>
-</div>
 <div class="offcanvas__social">
 <a href="#"><span class="social_facebook"></span></a>
 <a href="#"><span class="social_twitter"></span></a>
 <a href="#"><span class="social_linkedin"></span></a>
-<a href="#"><span class="social_pinterest"></span></a>
 </div>
 </div>
 
@@ -159,14 +155,10 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <li><span class="icon_pin"></span>5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
 </ul>
 <div class="header__top__right">
-<div class="header__top__right__auth">
-<a href="#"><span class="icon_profile"></span> Register or Sign in</a>
-</div>
 <div class="header__top__right__social">
 <a href="#"><span class="social_facebook"></span></a>
 <a href="#"><span class="social_twitter"></span></a>
 <a href="#"><span class="social_linkedin"></span></a>
-<a href="#"><span class="social_pinterest"></span></a>
 </div>
 </div>
 </div>
@@ -235,7 +227,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 </li>
 <li><a href="./fleet.html">Our Fleet</a></li>
 <li><a href="./career.html">Career</a></li>
-<li><a href="./contact.html">Reserve Ride</a></li>
+<li><a href="./contact.html">Reservation</a></li>
 <!--<li><a href="#">Brochure</a></li>-->
 </ul>
 </nav>
@@ -300,7 +292,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
   <p>Best Assisted Rides in VA</p>
 <h2>SENIOR CITIZENS TRANSPORTATION SERVICES</h2>
 
-<p id="test1">Our highly trained staff members are dedicated to responding with promptness, sensitivity, and integrity. We only hire professionally trained drivers who are thoughtful and compassionate and truly empathize and understand the difficulties that arise for persons with limited mobility. Each driver goes thorough background checks and has completed extensive training in the handling of patients with special needs to ensure safe and proper transfer. Our staff also understands the necessity of maintaining patient confidentiality. VA Transportation Healthcare LLC is the leading company for assisted medical transportation & nursing homes transportation in
+<p id="test1">Our highly trained staff members are dedicated to responding with promptness, sensitivity, and integrity. We only hire professionally trained drivers who are thoughtful and compassionate and truly empathize and understand the difficulties that arise for persons with limited mobility. Each driver goes thorough background checks and has completed extensive training in the handling of patients with special needs to ensure safe and proper transfer. Our staff also understands the necessity of maintaining patient confidentiality. BrightStar Non-Medical Transportation LLC is the leading company for assisted medical transportation & nursing homes transportation in
    <span id="area2">
   <script>
     const urlParams2 = new URLSearchParams(window.location.search);
