--- a/fleet.html
+++ b/fleet.html
@@ -138,14 +138,10 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <li><span class="icon_phone"></span> +1 540-380-0024</li>
 <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
 </ul>
-<div class="offcanvas__auth">
-<a href="#"><span class="icon_profile"></span> Register or Sign in</a>
-</div>
 <div class="offcanvas__social">
 <a href="#"><span class="social_facebook"></span></a>
 <a href="#"><span class="social_twitter"></span></a>
 <a href="#"><span class="social_linkedin"></span></a>
-<a href="#"><span class="social_pinterest"></span></a>
 </div>
 </div>
 
@@ -160,14 +156,10 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
 </ul>
 <div class="header__top__right">
-<div class="header__top__right__auth">
-<a href="#"><span class="icon_profile"></span> Register or Sign in</a>
-</div>
 <div class="header__top__right__social">
 <a href="#"><span class="social_facebook"></span></a>
 <a href="#"><span class="social_twitter"></span></a>
 <a href="#"><span class="social_linkedin"></span></a>
-<a href="#"><span class="social_pinterest"></span></a>
 </div>
 </div>
 </div>
@@ -236,7 +228,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 </li>
 <li class="active"><a href="./fleet.html">Our Fleet</a></li>
 <li><a href="./career.html">Career</a></li>
-<li><a href="./contact.html">Reserve Ride</a></li>
+<li><a href="./contact.html">Reservation</a></li>
 <!--<li><a href="#">Brochure</a></li>-->
 </ul>
 </nav>
@@ -288,9 +280,9 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <div class="about__company__title">
 <p>Our team endeavors to provide the very best nemt transportation service for all of our customer/ partners, including dependability, convenience, safety and value, while exhibiting servant leadership to all.
 
-VA Transportation Healthcare LLC was founded to bring reliable, quality nemt transportation services to those who are in need of assisted transportation,  VA Transportation Healthcare LLC is dedicated to serving our customers through professional transportation that fills the gap between personal and public transportation.
+BrightStar Non-Medical Transportation LLC was founded to bring reliable, quality nemt transportation services to those who are in need of assisted transportation,  BrightStar Non-Medical Transportation LLC is dedicated to serving our customers through professional transportation that fills the gap between personal and public transportation.
 
-VA Transportation Healthcare LLC will provide the most dependable wheelchair transportation of the highest quality and value with direct focus on meeting the needs of our clients and will respond with promptness, sensitivity and always with the utmost integrity. At  VA Transportation Healthcare LLC, we strive to exceed your expectations.
+BrightStar Non-Medical Transportation LLC will provide the most dependable wheelchair transportation of the highest quality and value with direct focus on meeting the needs of our clients and will respond with promptness, sensitivity and always with the utmost integrity. At  BrightStar Non-Medical Transportation LLC, we strive to exceed your expectations.
 
 All of our staff display photo ID badges, and in standard company uniforms. Our entire staff is screened and certified comfort and safety is our primary concern.</p>
 </div>
@@ -300,7 +292,7 @@ All of our staff display photo ID badges, and in standard company uniforms. Our 
   <p>Choose the best</p>
 <h2>Wheel Chair transportation</h2>
 <div class="about__company__title">
-<p>Our highly trained staff members are dedicated to respond with promptness, sensitivity and integrity. We only hire professionally trained drivers who are thoughtful and compassionate and truly empathize and understand the difficulties that arise for persons with limited mobility. Each driver goes through back ground check and has completed extensive training in the handling of patients with special needs to insure safe and proper transfer. Our staff also understands the necessity of maintaining patient confidentiality.  VA Transportation Healthcare LLC is the leading wheelchair transport in Washington DC, Virginia & Maryland, call us for more details or to schedule an appointment.</p></div>
+<p>Our highly trained staff members are dedicated to respond with promptness, sensitivity and integrity. We only hire professionally trained drivers who are thoughtful and compassionate and truly empathize and understand the difficulties that arise for persons with limited mobility. Each driver goes through back ground check and has completed extensive training in the handling of patients with special needs to insure safe and proper transfer. Our staff also understands the necessity of maintaining patient confidentiality.  BrightStar Non-Medical Transportation LLC is the leading wheelchair transport in Washington DC, Virginia & Maryland, call us for more details or to schedule an appointment.</p></div>
 </div>
 </div>
 <div class="container">
@@ -596,7 +588,7 @@ suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel 
 </div>
 <div class="col-lg-3 col-md-6 col-sm-6">
 <div class="footer__widget">
-<h5>VA Transportation HEALTHCARE</h5>
+<h5>BrightStar Non-Medical Transportation</h5>
 <ul class="address">
 <li><span class="icon_pin"></span> 8802 sudley road MANASSAS VA 20110</li>
 <li><span class="icon_phone"></span> +1 571 450 1300</li>
