--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@
 <a href="#"><span class="social_facebook"></span></a>
 <a href="#"><span class="social_twitter"></span></a>
 <a href="#"><span class="social_linkedin"></span></a>
-<a href="#"><span class="social_pinterest"></span></a>
 </div>
 </div>
 
@@ -157,7 +156,6 @@
 <a href="#"><span class="social_facebook"></span></a>
 <a href="#"><span class="social_twitter"></span></a>
 <a href="#"><span class="social_linkedin"></span></a>
-<a href="#"><span class="social_pinterest"></span></a>
 </div>
 </div>
 </div>
@@ -798,7 +796,7 @@ ut labore et dolore magna aliqua.</p>-->
 <div class="container-box" style="border: 1px solid orangered;padding: 2%;">
   <div class="information">
     
-    <p>Give a call to VA Transportation Healthcare Services for safe and convenient medical/non-medical transportation needs. Call <span style="color: red;"><a href="#" onclick="dialPhoneNumber('5714501300')" style="color: red;">571-450-1300</a></span> now or book in advance.</p>
+    <p>Give a call to BrightStar Non-Medical Transportation Services for safe and convenient medical/non-medical transportation needs. Call <span style="color: red;"><a href="#" onclick="dialPhoneNumber('5714501300')" style="color: red;">571-450-1300</a></span> now or book in advance.</p>
   </div>
   <a href="/contact.html" class="primary-btn"><span>Contact Us</span></a>
 </div>
