--- a/navbar.html
+++ b/navbar.html
@@ -15,7 +15,6 @@
     <a href="#"><span class="social_facebook"></span></a>
     <a href="#"><span class="social_twitter"></span></a>
     <a href="#"><span class="social_linkedin"></span></a>
-    <a href="#"><span class="social_pinterest"></span></a>
     </div>
     </div>
     </div>
@@ -27,7 +26,7 @@
     <div class="row">
     <div class="col-lg-2">
     <div class="header__logo">
-    <a href="./index.html"><img src="img/logo.png" alt="" style="height: 50px;"></a>
+    <a href="./index.html"><img src="img/new-logo.png" alt="" style="height: 50px;"></a>
     </div>
     </div>
     <div class="col-lg-10" style="padding-left: 100px;">
@@ -84,7 +83,7 @@
     </li>
     <li><a href="./fleet.html">Our Fleet</a></li>
     <li><a href="./career.html">Career</a></li>
-    <li><a href="./contact.html">Reserve Ride</a></li>
+    <li><a href="./contact.html">Reservation</a></li>
     <!--<li><a href="#">Brochure</a></li>-->
     </ul>
     </nav>
