--- a/applyjob.html
+++ b/applyjob.html
@@ -152,7 +152,6 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <a href="#"><span class="social_facebook"></span></a>
 <a href="#"><span class="social_twitter"></span></a>
 <a href="#"><span class="social_linkedin"></span></a>
-<a href="#"><span class="social_pinterest"></span></a>
 </div>
 </div>
 
@@ -172,7 +171,6 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <a href="#"><span class="social_facebook"></span></a>
 <a href="#"><span class="social_twitter"></span></a>
 <a href="#"><span class="social_linkedin"></span></a>
-<a href="#"><span class="social_pinterest"></span></a>
 </div>
 </div>
 </div>
@@ -184,7 +182,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <div class="row">
 <div class="col-lg-2">
 <div class="header__logo">
-<a href="./index.html"><img data-cfsrc="img/logo.png" alt="" style="height: 50px;"></a>
+<a href="./index.html"><img data-cfsrc="img/new-logo.png" alt="" style="height: 50px;"></a>
 </div>
 </div>
 <div class="col-lg-10" style="padding-left: 100px;">
@@ -241,7 +239,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 </li>
 <li><a href="./fleet.html">Our Fleet</a></li>
 <li><a href="./career.html">Career</a></li>
-<li class="active"><a href="./contact.html">Reserve Ride</a></li>
+<li class="active"><a href="./contact.html">Reservation</a></li>
 <!--<li><a href="#">Brochure</a></li>-->
 </ul>
 </nav>
