--- a/testimonials.html
+++ b/testimonials.html
@@ -133,14 +133,10 @@
 <li><span class="icon_phone"></span> +1 540-380-0024</li>
 <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
 </ul>
-<div class="offcanvas__auth">
-<a href="#"><span class="icon_profile"></span> Register or Sign in</a>
-</div>
 <div class="offcanvas__social">
 <a href="#"><span class="social_facebook"></span></a>
 <a href="#"><span class="social_twitter"></span></a>
 <a href="#"><span class="social_linkedin"></span></a>
-<a href="#"><span class="social_pinterest"></span></a>
 </div>
 </div>
 
@@ -159,7 +155,6 @@
 <a href="#"><span class="social_facebook"></span></a>
 <a href="#"><span class="social_twitter"></span></a>
 <a href="#"><span class="social_linkedin"></span></a>
-<a href="#"><span class="social_pinterest"></span></a>
 </div>
 </div>
 </div>
@@ -549,7 +544,7 @@ ut labore et dolore magna aliqua.</p>-->
 <div class="container-box" style="border: 1px solid orangered;padding: 2%;">
   <div class="information">
     
-    <p>Give a call to VA Transportation Healthcare Services for safe and convenient medical/non-medical transportation needs. Call <span style="color: red;"><a href="#" onclick="dialPhoneNumber('5714501300')" style="color: red;">571-450-1300</a></span> now or book in advance.</p>
+    <p>Give a call to BrightStar Non-Medical Transportation Services for safe and convenient medical/non-medical transportation needs. Call <span style="color: red;"><a href="#" onclick="dialPhoneNumber('5714501300')" style="color: red;">571-450-1300</a></span> now or book in advance.</p>
   </div>
   <a href="/contact.html" class="primary-btn"><span>Contact Us</span></a>
 </div>
@@ -599,7 +594,7 @@ suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel 
 </div>
 <div class="col-lg-3 col-md-6 col-sm-6">
 <div class="footer__widget">
-<h5>VA Transportation HEALTHCARE</h5>
+<h5>BrightStar Non-Medical Transportation</h5>
 <ul class="address">
 <li><span class="icon_pin"></span> 8802 sudley road MANASSAS VA 20110</li>
 <li><span class="icon_phone"></span> +1 571 450 1300</li>
