--- a/blog.html
+++ b/blog.html
@@ -110,29 +110,29 @@
 <body>
 
   <div class="ibar">
-    <a href="#" class="facebk">
-      Visit Us<i class="fa-brands fa-square-facebook"></i>
-    </a>
-    <a href="#" class="insta">
-      Visit Us<i class="fa-brands fa-square-instagram"></i>
-    </a>
-    <a href="#" class="twi">
-      Visit Us<i class="fa-brands fa-square-twitter"></i>
-    </a>
-    <a href="#" class="tik">
-      Visit Us<i class="fa-brands fa-tiktok"></i>
-    </a>
-    <a href="#" class="mail">
-      Visit Us<i class="fa-sharp fa-solid fa-envelope"></i>
-    </a>
-    <a href="#" class="utube">
-      Visit Us<i class="fa-brands fa-square-youtube"></i>
-    </a>
-    <a href="#" class="linkedin">
-      Visit Us<i class="fa-brands fa-linkedin"></i>
-    </a>
-  </div>
-  <div id="preloder">
+    <div class="ibar">
+      <a href="https://www.facebook.com/profile.php?id=61551405146949" class="facebk">
+        Visit Us<i class="fa-brands fa-square-facebook"></i>
+      </a>
+      <a href="https://www.instagram.com/brightstarnonmedicaltransport/" class="insta">
+        Visit Us<i class="fa-brands fa-square-instagram"></i>
+      </a>
+      <a href="https://twitter.com/brightstarnmt" class="twi">
+        Visit Us<i class="fa-brands fa-square-twitter"></i>
+      </a>
+      
+      <a href="mailto:brightstarnonmedicaltransport@gmail.com" class="mail">
+        Visit Us<i class="fa-sharp fa-solid fa-envelope"></i>
+      </a>
+      <a href="https://www.youtube.com/@BrightStarNon-MedicalTransport/featured" class="utube">
+        Visit Us<i class="fa-brands fa-square-youtube"></i>
+      </a>
+      <a href="www.linkedin.com/in/irihose-obed-004571291" class="linkedin">
+        Visit Us<i class="fa-brands fa-linkedin"></i>
+      </a>
+    </div>
+    
+    <div id="preloder">
     <div class="loader"></div>
   </div>
 
@@ -159,14 +159,10 @@
       <li><span class="icon_phone"></span> +1 540-380-0024</li>
       <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
     </ul>
-    <div class="offcanvas__auth">
-      <a href="#"><span class="icon_profile"></span> Register or Sign in</a>
-    </div>
     <div class="offcanvas__social">
-      <a href="#"><span class="social_facebook"></span></a>
-      <a href="#"><span class="social_twitter"></span></a>
-      <a href="#"><span class="social_linkedin"></span></a>
-      <a href="#"><span class="social_pinterest"></span></a>
+      <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
+      <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
+      <a href="www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
     </div>
   </div>
 
@@ -181,14 +177,10 @@
               <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
             </ul>
             <div class="header__top__right">
-              <div class="header__top__right__auth">
-                <a href="#"><span class="icon_profile"></span> Register or Sign in</a>
-              </div>
               <div class="header__top__right__social">
-                <a href="#"><span class="social_facebook"></span></a>
-                <a href="#"><span class="social_twitter"></span></a>
-                <a href="#"><span class="social_linkedin"></span></a>
-                <a href="#"><span class="social_pinterest"></span></a>
+                <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
+                <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
+                <a href="www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
               </div>
             </div>
           </div>
