--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Bright Star</title>
+  <title>Bright Star Non-Medical Transportation</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
@@ -108,22 +108,23 @@
 <body>
 
   <div class="ibar">
-    <a href="#" class="facebk">
+    <a href="https://www.facebook.com/profile.php?id=61551405146949" class="facebk">
       Visit Us<i class="fa-brands fa-square-facebook"></i>
     </a>
-    <a href="#" class="insta">
+    <a href="https://www.instagram.com/brightstarnonmedicaltransport/" class="insta">
       Visit Us<i class="fa-brands fa-square-instagram"></i>
     </a>
-    <a href="#" class="twi">
+    <a href="https://twitter.com/brightstarnmt" class="twi">
       Visit Us<i class="fa-brands fa-square-twitter"></i>
     </a>
-    <a href="#" class="mail">
+    
+    <a href="mailto:brightstarnonmedicaltransport@gmail.com" class="mail">
       Visit Us<i class="fa-sharp fa-solid fa-envelope"></i>
     </a>
-    <a href="#" class="utube">
+    <a href="https://www.youtube.com/@BrightStarNon-MedicalTransport/featured" class="utube">
       Visit Us<i class="fa-brands fa-square-youtube"></i>
     </a>
-    <a href="#" class="linkedin">
+    <a href="www.linkedin.com/in/irihose-obed-004571291" class="linkedin">
       Visit Us<i class="fa-brands fa-linkedin"></i>
     </a>
   </div>
@@ -156,9 +157,9 @@
     </ul>
 
     <div class="offcanvas__social">
-      <a href="#"><span class="social_facebook"></span></a>
-      <a href="#"><span class="social_twitter"></span></a>
-      <a href="#"><span class="social_linkedin"></span></a>
+      <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
+      <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
+      <a href="www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
     </div>
   </div>
 
@@ -174,9 +175,9 @@
             </ul>
             <div class="header__top__right">
               <div class="header__top__right__social">
-                <a href="#"><span class="social_facebook"></span></a>
-                <a href="#"><span class="social_twitter"></span></a>
-                <a href="#"><span class="social_linkedin"></span></a>
+                <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
+                <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
+                <a href="www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
               </div>
             </div>
           </div>
