--- a/contact.html
+++ b/contact.html
@@ -120,22 +120,23 @@
 <body>
 
   <div class="ibar">
-    <a href="#" class="facebk">
+    <a href="https://www.facebook.com/profile.php?id=61551405146949" class="facebk">
       Visit Us<i class="fa-brands fa-square-facebook"></i>
     </a>
-    <a href="#" class="insta">
+    <a href="https://www.instagram.com/brightstarnonmedicaltransport/" class="insta">
       Visit Us<i class="fa-brands fa-square-instagram"></i>
     </a>
-    <a href="#" class="twi">
+    <a href="https://twitter.com/brightstarnmt" class="twi">
       Visit Us<i class="fa-brands fa-square-twitter"></i>
     </a>
-    <a href="#" class="mail">
+    
+    <a href="mailto:brightstarnonmedicaltransport@gmail.com" class="mail">
       Visit Us<i class="fa-sharp fa-solid fa-envelope"></i>
     </a>
-    <a href="#" class="utube">
+    <a href="https://www.youtube.com/@BrightStarNon-MedicalTransport/featured" class="utube">
       Visit Us<i class="fa-brands fa-square-youtube"></i>
     </a>
-    <a href="#" class="linkedin">
+    <a href="www.linkedin.com/in/irihose-obed-004571291" class="linkedin">
       Visit Us<i class="fa-brands fa-linkedin"></i>
     </a>
   </div>
@@ -168,9 +169,9 @@
     </ul>
 
     <div class="offcanvas__social">
-      <a href="#"><span class="social_facebook"></span></a>
-      <a href="#"><span class="social_twitter"></span></a>
-      <a href="#"><span class="social_linkedin"></span></a>
+      <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
+      <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
+      <a href="www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
     </div>
   </div>
 
@@ -187,9 +188,9 @@
             <div class="header__top__right">
 
               <div class="header__top__right__social">
-                <a href="#"><span class="social_facebook"></span></a>
-                <a href="#"><span class="social_twitter"></span></a>
-                <a href="#"><span class="social_linkedin"></span></a>
+                <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
+                <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
+                <a href="www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
               </div>
             </div>
           </div>
