--- a/navbar.html
+++ b/navbar.html
@@ -14,9 +14,9 @@
                         </ul>
                         <div class="header__top__right">
                             <div class="header__top__right__social">
-                                <a href="#"><span class="social_facebook"></span></a>
-                                <a href="#"><span class="social_twitter"></span></a>
-                                <a href="#"><span class="social_linkedin"></span></a>
+                                <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
+                                <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
+                                <a href="www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
                             </div>
                         </div>
                     </div>
