--- a/testimonials.html
+++ b/testimonials.html
@@ -126,7 +126,7 @@
     <a href="https://www.youtube.com/@BrightStarNon-MedicalTransport/featured" class="utube">
       Visit Us<i class="fa-brands fa-square-youtube"></i>
     </a>
-    <a href="www.linkedin.com/in/irihose-obed-004571291" class="linkedin">
+    <a href="https://www.linkedin.com/in/irihose-obed-004571291" class="linkedin">
       Visit Us<i class="fa-brands fa-linkedin"></i>
     </a>
   </div>
@@ -152,7 +152,7 @@
     <div class="offcanvas__social">
       <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
       <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
-      <a href="www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
+      <a href="https://www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
     </div>
   </div>
 
@@ -170,7 +170,7 @@
               <div class="header__top__right__social">
                 <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
                 <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
-                <a href="www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
+                <a href="https://www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
               </div>
             </div>
           </div>
