--- a/contact.html
+++ b/contact.html
@@ -212,15 +212,15 @@
                 <li><a href="./about.html">About Us</a></li>
                 <li><a href="./services.html">Services</a>
                   <ul class="dropdown">
-                    <li><a href="./about.html">Elderly Transportation</a></li>
-                    <li><a href="./services-details.html">Bed to Bed Transportation</a></li>
-                    <li><a href="./blog-details.html">Strecher Transport</a></li>
-                    <li><a href="./about.html">Non-Emergency Medical Transportation</a></li>
-                    <li><a href="./about.html">Wheelchair Transportation</a></li>
-                    <li><a href="./about.html">Special Tips</a></li>
-                    <li><a href="./about.html">Ambulatory Transport</a></li>
-                    <li><a href="./about.html">Long Distance Transportation</a></li>
-                    <li><a href="./about.html">Bariatric Transportation</a></li>
+                    <li><a href="./elderly.html">Elderly Transportation</a></li>
+                    <li><a href="./btb.html">Bed to Bed Transportation</a></li>
+                    <li><a href="./stretcher.html">Strecher Transport</a></li>
+                    <li><a href="./nem.html">Non-Emergency Non-Medical Transportation</a></li>
+                    <li><a href="./wheel.html">Wheelchair Transportation</a></li>
+                    <li><a href="./special.html">Special Tips</a></li>
+                    <li><a href="./ambulatory.html">Ambulatory Transport</a></li>
+                    <li><a href="./ldistance.html">Long Distance Transportation</a></li>
+                    <li><a href="./bariatric.html">Bariatric Transportation</a></li>
 
                   </ul>
                 </li>
