--- a/index.html
+++ b/index.html
@@ -192,15 +192,15 @@
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./services.html">Services</a>
                   <ul class="dropdown">
-                    <li><a href="./about.html">Elderly Transportation</a></li>
-                    <li><a href="./services-details.html">Bed to Bed Transportation</a></li>
-                    <li><a href="./blog-details.html">Strecher Transport</a></li>
-                    <li><a href="./about.html">Non-Emergency Medical Transportation</a></li>
-                    <li><a href="./about.html">Wheelchair Transportation</a></li>
-                    <li><a href="./about.html">Special Tips</a></li>
-                    <li><a href="./about.html">Ambulatory Transport</a></li>
-                    <li><a href="./about.html">Long Distance Transportation</a></li>
-                    <li><a href="./about.html">Bariatric Transportation</a></li>
+                    <li><a href="./elderly.html">Elderly Transportation</a></li>
+                    <li><a href="./btb.html">Bed to Bed Transportation</a></li>
+                    <li><a href="./stretcher.html">Strecher Transport</a></li>
+                    <li><a href="./nem.html">Non-Emergency Non-Medical Transportation</a></li>
+                    <li><a href="./wheel.html">Wheelchair Transportation</a></li>
+                    <li><a href="./special.html">Special Tips</a></li>
+                    <li><a href="./ambulatory.html">Ambulatory Transport</a></li>
+                    <li><a href="./ldistance.html">Long Distance Transportation</a></li>
+                    <li><a href="./bariatric.html">Bariatric Transportation</a></li>
 
                   </ul>
                 </li>
@@ -212,29 +212,6 @@
                 <li><a href="./discount.html">Discounts</a></li>
                 <li><a href="#">Service Areas</a>
                   <ul class="dropdown">
-                    <li><a href="areas.html?areaName=Ashburn+VA">Ashburn VA</a></li>
-                    <li><a href="areas.html?areaName=Dumfries+VA">Dumfries VA</a></li>
-                    <li><a href="areas.html?areaName=Fairfax+VA">Fairfax VA</a></li>
-                    <li><a href="areas.html?areaName=Herndon+VA">Herndon VA</a></li>
-                    <li><a href="areas.html?areaName=Leesburg+VA">Leesburg VA</a></li>
-                    <li><a href="areas.html?areaName=Manassas+VA">Manassas VA</a></li>
-                    <li><a href="areas.html?areaName=Sterling+VA">Sterling VA</a></li>
-                    <li><a href="areas.html?areaName=Alexandria+VA">Alexandria VA</a></li>
-                    <li><a href="areas.html?areaName=Annandale+VA">Annandale VA</a></li>
-                    <li><a href="areas.html?areaName=Arlington+VA">Arlington VA</a></li>
-                    <li><a href="areas.html?areaName=Bristow+VA">Bristow VA</a></li>
-                    <li><a href="areas.html?areaName=Burke+VA">Burke VA</a></li>
-                    <li><a href="areas.html?areaName=Centreville+VA">Centreville VA</a></li>
-                    <li><a href="areas.html?areaName=Chantilly+VA">Chantilly VA</a></li>
-                    <li><a href="areas.html?areaName=Falls+Church+VA">Falls Church VA</a></li>
-                    <li><a href="areas.html?areaName=Fredrickburg+VA">Fredrickburg VA</a></li>
-                    <li><a href="areas.html?areaName=Gainesville+VA">Gainesville VA</a></li>
-                    <li><a href="areas.html?areaName=Mc+Lean+VA">Mc Lean VA</a></li>
-                    <li><a href="areas.html?areaName=Reston+VA">Reston VA</a></li>
-                    <li><a href="areas.html?areaName=Springfield+VA">Springfield</a></li>
-                    <li><a href="areas.html?areaName=Stafford+VA">Stafford VA</a></li>
-                    <li><a href="areas.html?areaName=Vienna+VA">Vienna VA</a></li>
-                    <li><a href="areas.html?areaName=Woodbridge+VA">Woodbridge VA</a></li>
                     <li><a href="areas.html?areaName=Roanoke+Region">Roanoke Region</a></li>
                     <li><a href="areas.html?areaName=Christiansburg">Christiansburg</a></li>
                     <li><a href="areas.html?areaName=Lynchburg">Lynchburg</a></li>
@@ -815,15 +792,10 @@ ut labore et dolore magna aliqua.</p>-->
                 transportation</span> , Our state-of-the-art wheelchair accessible vehicles are available 24/7 for safe
               and reliable service.</h6>
             <br>
-            <h6 style="color: #FF8F00;">Virginia Service Areas: <a href="#">Dumfries</a> | <a href="#">Gainesville</a> |
-              <a href="#">Falls Church</a> | <a href="#">Vienna</a> | <a href="#">Fairfax</a> | <a
-                href="#">Chantilly</a> | <a href="#">Herndon</a> | <a href="#">Fredericksburg</a> |
-              <a href="#">Sterling</a> | <a href="#">Bristow</a> | <a href="#">Springfield</a> | <a
-                href="#">Manassas</a> | <a href="#">Annandale</a> | <a href="#">Burke</a> | <a href="#">Ashburn</a> | <a
-                href="#">McLean</a> | <a href="#">Leesburg</a> |
-              <a href="#">Woodbridge</a> | <a href="#">Reston</a> | <a href="#">Centreville</a> | <a
-                href="#">Alexandria</a> | <a href="#">Stafford</a> | <a href="#">Arlington</a> | <a href="#">Lorton</a>
-              | <a href="#">Reston</a> | <a href="#">Spotsylvania</a> | <a href="#">Mount Vernon</a>
+            <h6 style="color: #FF8F00;">Virginia Service Areas: <a href="#">Roanoke</a> | <a href="#">Christiansburg</a> |
+              <a href="#">Lynchburg</a> | <a href="#">Blacksburg</a> | <a href="#">Wise County</a> | <a
+                href="#">Lee County</a> | <a href="#">Gate City</a> | <a href="#">Smith County</a> |
+              <a href="#">NOVA</a> 
             </h6>
             <div style="text-align: center;">
               <button style="color: white; background-color: #FF8F00;">Download Brochure</button>
